force-app/main/default/objects/SDOH__c/SDOH__c.object-meta.xml
<CustomObject>
    <label>SDOH</label>
    <nameField>
        <displayFormat>SDOH-{00000}</displayFormat>
        <label>SDOH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDOH</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>