force-app/main/default/objects/SDOH__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assessment record to which the SDOH is related to</description>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>SDOH</relationshipLabel>
    <relationshipName>SDOH</relationshipName>
    <type>Lookup</type>
</CustomField>