force-app/main/default/objects/SDOH__c/fields/AssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDate__c</fullName>
    <description>Date the assessment was completed for the assessment</description>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>