force-app/main/default/objects/SDOH__c/fields/IsLatest__c.field-meta.xml
<CustomField>
    <fullName>IsLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the SDOH record is the latest or not</description>
    <label>IsLatest</label>
    <type>Checkbox</type>
</CustomField>