force-app/main/default/objects/SDOH__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resident record for which the SDOH record is created</description>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SDOH</relationshipLabel>
    <relationshipName>SDOH</relationshipName>
    <type>Lookup</type>
</CustomField>