force-app/main/default/objects/SDOH__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score alloted for the SDOH category</description>
    <label>Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>